5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1756_674.log
== TEST (2019-05-28 18:28:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval("vet ="))

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:28:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval("vet = :"))

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:29:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:55:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[size(vet)])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:56:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[1])
print(vet[size(vet)])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:56:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[size(vet)])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:57:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:58:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2))
-- EXECUTION TIME:
0.366782
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:15:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2)
-- ERROR:
File "XXXX", line 13
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:15:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2)
-- EXECUTION TIME:
0.135851
-- ERROR:
  File "/home/codebench/codes/1756/674/main.py", line 13
    
                                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round((sum(vet) / size(vet)),2)
-- ERROR:
File "XXXX", line 13
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:26:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet) / size(vet),2)
-- ERROR:
File "XXXX", line 13
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:26:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet) / size(vet),2)
-- EXECUTION TIME:
0.192844
-- ERROR:
  File "/home/codebench/codes/1756/674/main.py", line 13
    
                                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:26:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet) / size(vet),2)
-- ERROR:
File "XXXX", line 13
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:26:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet) / size(vet),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:27:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vet=array(eval(input("vet = :")))

print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet) / size(vet),2))
-- EXECUTION TIME:
0.421245
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
